# musify

./: .gitignore  LICENSE  README.md  global.css
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/scripts/: download-music.js  musics-controls.js  utils.js
